# leptos-wasmcloud

./: Cargo.toml  README.md  rust-toolchain.toml
docs/: initial-study.md  request-lifecycle.md
src/: bindings.rs  lib.rs  main.rs  routes.rs  server.rs
src/pages/: home.rs
styles/: tailwind.css
wit/: README.md  server.wit
