[package]
name = "leptos-wasmcloud"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
cfg-if = "1"
leptos = "0.6.6"
leptos_integration_utils = { version = "0.6.6", optional = true }
leptos_meta = "0.6.6"
leptos_router = "0.6.6"
wasm-bindgen = { version = "0.2", optional = true }
wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"], optional = true }

[features]
# TODO: remove the default features, cargo leptos should handle building the ssr
#       and the hydrate itself.
default=["ssr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "dep:wasm-bindgen",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:wit-bindgen-rt",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.component]
package = "examples:server"
proxy = true

[package.metadata.component.target]
path = "wit"
world = "examples:server/imports"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:logging" = { path = "wit/deps/logging" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:sockets" = { path = "wit/deps/sockets" }

[package.metadata.leptos]
# == Hydrate (client)
lib-profile-release = "wasm-release"
lib-features = ["hydrate"]
lib-cargo-args = [
    "-Zbuild-std=std,panic_abort,core,alloc",
    "-Zbuild-std-features=panic_immediate_abort,wasi_ext",
]

# == SSR
bin-profile-release = "wasm-release"
# TODO: port to wasip2 as soon as cargo-component supports it
bin-target-triple = "wasm32-wasip1"
bin-features = ["ssr"]
bin-cargo-args = [
    "-Zbuild-std=std,panic_abort,core,alloc",
    "-Zbuild-std-features=panic_immediate_abort,wasi_ext",
]
