[package]
name = "leptos_wasmcloud"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.7.2"
cfg-if = "1"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
wasi = { version = "0.13.1", optional = true }
hydration_context = { git = "https://github.com/leptos-rs/leptos" }
leptos = { git = "https://github.com/leptos-rs/leptos" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos" }
leptos_router = { git = "https://github.com/leptos-rs/leptos" }
leptos_wasi = { git = "https://github.com/leptos-rs/leptos_wasi", optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }

[features]
hydrate = [
  "leptos/hydrate",
  "dep:wasm-bindgen",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_wasi",
  "dep:wasi",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
tailwind-input-file = "styles/tailwind.css"

# == Hydrate (client)
lib-profile-release = "wasm-release"
lib-features = ["hydrate"]
lib-cargo-args = [
    "-Zbuild-std=std,panic_abort,core,alloc",
    "-Zbuild-std-features=panic_immediate_abort",
]

# == SSR
bin-profile-release = "wasm-release"
bin-target-triple = "wasm32-wasip2"
bin-features = ["ssr"]
bin-cargo-command = "cargo-component"
bin-target-dir = "target/server"
bin-cargo-args = [
    "-Zbuild-std=std,panic_abort,core,alloc",
    "-Zbuild-std-features=panic_immediate_abort,wasi_ext",
]
